crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_elements-10.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: element(input.into())
---
Err(
    Failure(
        Report(
            Report {
                diagnostics: [
                    Diagnostic {
                        msg: "parser error: invalid closing tag, expected div",
                        severity: Error,
                        helpers: [
                            Helper {
                                msg: "here",
                                span: 20..21,
                            },
                        ],
                        offset: 20,
                        note: Some(
                            "replace this tag with the expected!",
                        ),
                    },
                ],
            },
        ),
    ),
)
