crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_elements-11.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: element(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 9,
            line: 1,
            fragment: "",
            extra: (),
        },
        Element {
            tag: "div",
            attrs: [],
            children: [
                Node {
                    metadata: Location {
                        offset: 4,
                        length: 1,
                    },
                    node_type: Text(
                        Text(
                            "]",
                        ),
                    ),
                },
            ],
        },
    ),
)
