crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_elements-12.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: element(input.into())
---
Err(
    Failure(
        Report(
            Report {
                diagnostics: [
                    Diagnostic {
                        msg: "parser error: unclosed tag: div",
                        severity: Error,
                        helpers: [
                            Helper {
                                msg: "from here",
                                span: 1..2,
                            },
                            Helper {
                                msg: "here",
                                span: 4..5,
                            },
                        ],
                        offset: 4,
                        note: Some(
                            "tag never closed",
                        ),
                    },
                ],
            },
        ),
    ),
)
