crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_elements-13.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: element(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 28,
            line: 1,
            fragment: "",
            extra: (),
        },
        Element {
            tag: "span",
            attrs: [
                KeyValue(
                    "x",
                    Some(
                        Literal(
                            "green",
                        ),
                    ),
                ),
            ],
            children: [
                Node {
                    metadata: Location {
                        offset: 0,
                        length: 0,
                        line: 0,
                        column: 0,
                    },
                    node_type: Text(
                        "hello world",
                    ),
                },
            ],
        },
    ),
)
