crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_elements-3.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 1,
                    length: 30,
                },
                node_type: Element(
                    Element {
                        tag: "div",
                        attrs: [
                            KeyValue(
                                "hello",
                                Some(
                                    Literal(
                                        "world",
                                    ),
                                ),
                            ),
                        ],
                        children: [],
                    },
                ),
            },
        ],
        script: None,
        css: None,
        wasm: None,
        comptime: None,
    },
)
