crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_elements-4.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: element(input.into())
---
Err(
    Failure(
        Report {
            errors: [
                ParseError {
                    fragment: LocatedSpan {
                        offset: 15,
                        line: 1,
                        fragment: "world    ] /div",
                        extra: (),
                    },
                    help: Some(
                        Help {
                            corresponding_line: None,
                            message: "quote was never closed",
                        },
                    ),
                    err_type: ExpectedCharacter(
                        '"',
                    ),
                },
            ],
        },
    ),
)
