crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_elements-7.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: element(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 19,
            line: 1,
            fragment: "",
            extra: (),
        },
        Element {
            tag: "div",
            attrs: [],
            children: [
                Node {
                    metadata: Location {
                        offset: 5,
                        length: 10,
                    },
                    node_type: Element(
                        Element {
                            tag: "ul",
                            attrs: [],
                            children: [],
                        },
                    ),
                },
            ],
        },
    ),
)
