crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_elements-9.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Err(
    ParseError {
        fragment: Location {
            offset: 18,
            length: 1,
        },
        help: None,
        err_type: ExpectedAny(
            [
                "an attribute name",
                "colon binding (i.e. `:bind`)",
                "event handler (i.e. `@event`)",
            ],
        ),
    },
)
